--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "description": "React Native component for firing actions based on swipe gestures.",
   "peerDependencies": {
-    "react-native": "^>=0.14.0"
+    "react-native": ">=0.14.0"
   },
   "repository": {
     "type": "git",
