--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "version": "0.0.1",
   "main": "index.js",
-  "description": "React Native component for firing actions based on swipe gestures.",
+  "description": "React Native component for firing actions based on swipe gestures",
   "peerDependencies": {
     "react-native": ">=0.14.0"
   },
